force-app/main/default/objects/DmlError__c/DmlError__c.object-meta.xml
<CustomObject>
    <label>DmlError</label>
    <nameField>
        <label>DmlError Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DmlErrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>