force-app/main/default/objects/DmlError__c/fields/DML_status__c.field-meta.xml
<CustomField>
    <fullName>DML_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DML status</label>
    <type>Checkbox</type>
</CustomField>