force-app/main/default/objects/DmlError__c/fields/errormessage__c.field-meta.xml
<CustomField>
    <fullName>errormessage__c</fullName>
    <label>errormessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>