force-app/main/default/objects/DmlError__c/fields/Id_o_fDML__c.field-meta.xml
<CustomField>
    <fullName>Id_o_fDML__c</fullName>
    <label>Id o fDML</label>
    <length>18</length>
    <type>Text</type>
</CustomField>