force-app/main/default/objects/DmlError__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>