force-app/main/default/objects/DmlError__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DML_status__c</columns>
    <columns>Id_o_fDML__c</columns>
    <columns>errormessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>